--- a/paper/ldpcGpuTegra_bibliography.bib
+++ b/paper/ldpcGpuTegra_bibliography.bib
@@ -3,10 +3,10 @@
 @INPROCEEDINGS{6638633, 
 author={Andrade, J. and Falcao, G. and Silva, V. and Kasai, K.}, 
 booktitle={Acoustics, Speech and Signal Processing (ICASSP), 2013 IEEE International Conference on}, 
-title={FFT-SPA non-binary LDPC decoding on GPU}, 
+title={FFT-SPA non-binary {LDPC} decoding on GPU}, 
 year={2013}, 
 pages={5099-5103}, 
-keywords={decoding;error statistics;fast Fourier transforms;graphics processing units;parity check codes;signal processing;BER performance;FFT-SPA;FFT-SPA nonbinary LDPC decoding;GPU;binary LDPC codes;complex decoding algorithms;error correcting capabilities;fast-Fourier transform sum-product algorithm;multicore systems;nonbinary LDPC codes;nonbinary codes;parallel signal processing algorithms;real-time video applications;Complexity theory;Decoding;Engines;Graphics processing units;Kernel;Parity check codes;Throughput;Communications;Error correcting codes;GF(q);GPU;Non-binary LDPC codes}, 
+keywords={decoding;error statistics;fast Fourier transforms;graphics processing units;parity check codes;signal processing;BER performance;FFT-SPA;FFT-SPA nonbinary {LDPC} decoding;GPU;binary {LDPC} codes;complex decoding algorithms;error correcting capabilities;fast-Fourier transform sum-product algorithm;multicore systems;nonbinary {LDPC} codes;nonbinary codes;parallel signal processing algorithms;real-time video applications;Complexity theory;Decoding;Engines;Graphics processing units;Kernel;Parity check codes;Throughput;Communications;Error correcting codes;GF(q);GPU;Non-binary {LDPC} codes}, 
 doi={10.1109/ICASSP.2013.6638633}, 
 ISSN={1520-6149}, 
 month={May},
@@ -50,12 +50,12 @@ month={May},
 @ARTICLE{5763806, 
 author={Falcao, G. and Andrade, J. and Silva, V. and Sousa, L.}, 
 journal={Electronics Letters}, 
-title={GPU-based DVB-S2 LDPC decoder with high throughput and fast error floor detection}, 
+title={GPU-based DVB-S2 {LDPC} decoder with high throughput and fast error floor detection}, 
 year={2011}, 
 volume={47}, 
 number={9}, 
 pages={542-543}, 
-keywords={decoding;digital video broadcasting;direct broadcasting by satellite;error correction codes;error statistics;parity check codes;GPU-based DVB-S2 LDPC decoder;VLSI-based decoders;bit error rate;error correcting codes;error floor detection;global memory;graphics processing unit;low density parity check codes;parallel multi-threaded decoding}, 
+keywords={decoding;digital video broadcasting;direct broadcasting by satellite;error correction codes;error statistics;parity check codes;GPU-based DVB-S2 {LDPC} decoder;VLSI-based decoders;bit error rate;error correcting codes;error floor detection;global memory;graphics processing unit;low density parity check codes;parallel multi-threaded decoding}, 
 doi={10.1049/el.2011.0201}, 
 ISSN={0013-5194}, 
 month={April},
@@ -76,7 +76,7 @@ month={June},
 @ARTICLE{7110620, 
 author={Le Gal, B. and Jego, C.}, 
 journal={Parallel and Distributed Systems, IEEE Transactions on}, 
-title={High-throughput multi-core LDPC decoders based on x86 processor}, 
+title={High-throughput multi-core {LDPC} decoders based on x86 processor}, 
 year={2015}, 
 volume={PP}, 
 number={99}, 
@@ -101,7 +101,7 @@ month={Aug},
 @INPROCEEDINGS{6629867, 
 author={Falcao, Gabriel and Andrade, Joao and Silva, Vitor and Yamagiwa, Shinichi and Sousa, -}, 
 booktitle={Wireless Communication Systems (ISWCS 2013), Proceedings of the Tenth International Symposium on}, 
-title={Stressing the BER simulation of LDPC codes in the error floor region using GPU clusters}, 
+title={Stressing the BER simulation of {LDPC} codes in the error floor region using {GPU} clusters}, 
 year={2013}, 
 pages={1-5}, 
 month={Aug},
@@ -144,7 +144,7 @@ month={Oct},
 @ARTICLE{art_gpu_0, 
 author={B. L. Gal and C. Jego and J. Crenne}, 
 journal={IEEE Embedded Systems Letters}, 
-title={A High Throughput Efficient Approach for Decoding LDPC Codes onto GPU Devices}, 
+title={A High Throughput Efficient Approach for Decoding {LDPC} Codes onto {GPU} Devices}, 
 year={2014}, 
 volume={6}, 
 number={2}, 
@@ -157,12 +157,12 @@ month={June},}
 @ARTICLE{art_neon, 
 author={B. Le Gal and C. Jego}, 
 journal={IEEE Communications Letters}, 
-title={High-Throughput LDPC Decoder on Low-Power Embedded Processors}, 
+title={High-Throughput {LDPC} Decoder on Low-Power Embedded Processors}, 
 year={2015}, 
 volume={19}, 
 number={11}, 
 pages={1861-1864}, 
-keywords={decoding;embedded systems;graphics processing units;low-power electronics;microcontrollers;parity check codes;10-layered-decoding iterations;ARM-based decoders;CPU devices;GPU devices;hardware architectures;high-throughput LDPC decoder;latencies;low-density parity check code;low-power embedded processors;low-power programmable architecture;Decoding;Graphics processing units;Parity check codes;Power demand;Throughput;ARM processor;LDPC;SIMD;multi-core}, 
+keywords={decoding;embedded systems;graphics processing units;low-power electronics;microcontrollers;parity check codes;10-layered-decoding iterations;ARM-based decoders;CPU devices;GPU devices;hardware architectures;high-throughput {LDPC} decoder;latencies;low-density parity check code;low-power embedded processors;low-power programmable architecture;Decoding;Graphics processing units;Parity check codes;Power demand;Throughput;ARM processor;LDPC;SIMD;multi-core}, 
 doi={10.1109/LCOMM.2015.2477081}, 
 ISSN={1089-7798}, 
 month={Nov},}
@@ -193,16 +193,16 @@ month={Feb},}
 @INPROCEEDINGS{art_layered0, 
 author={D. E. Hocevar}, 
 booktitle={Signal Processing Systems, 2004. SIPS 2004. IEEE Workshop on}, 
-title={A reduced complexity decoder architecture via layered decoding of LDPC codes}, 
+title={A reduced complexity decoder architecture via layered decoding of {LDPC} codes}, 
 year={2004}, 
 pages={107-112}, 
-keywords={computational complexity;iterative decoding;parity check codes;decoder logic;irregular LDPC codes;irregular partitioned permutation LDPC codes;iterations;layered belief propagation decoding;layered decoding;reduced complexity decoder architecture;Decoding;Parity check codes}, 
+keywords={computational complexity;iterative decoding;parity check codes;decoder logic;irregular {LDPC} codes;irregular partitioned permutation {LDPC} codes;iterations;layered belief propagation decoding;layered decoding;reduced complexity decoder architecture;Decoding;Parity check codes}, 
 doi={10.1109/SIPS.2004.1363033}, 
 month={Oct},}
 
 @article{art_layered1,
  author = {Gal, Bertrand Le and Jego, Christophe},
- title = {GPU-like On-chip System for Decoding LDPC Codes},
+ title = {GPU-like On-chip System for Decoding {LDPC} Codes},
  journal = {ACM Trans. Embed. Comput. Syst.},
  issue_date = {November 2014},
  volume = {13},
@@ -218,28 +218,28 @@ month={Oct},}
  acmid = {2538668},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {FEC techniques, FPGA implementation, GPU-like architecture, LDPC codes, MIPS processor, SIMD matrix, signal processing systems},
+ keywords = {FEC techniques, FPGA implementation, GPU-like architecture, {LDPC} codes, MIPS processor, SIMD matrix, signal processing systems},
 }
 
 @INPROCEEDINGS{art_optimize_0, 
 author={G. Wang and M. Wu and B. Yin and J. R. Cavallaro}, 
 booktitle={Global Conference on Signal and Information Processing (GlobalSIP), 2013 IEEE}, 
-title={High throughput low latency LDPC decoding on GPU for SDR systems}, 
+title={High throughput low latency {LDPC} decoding on {GPU} for {SDR} systems}, 
 year={2013}, 
 pages={1258-1261}, 
-keywords={codecs;data communication;decoding;graphics processing units;parity check codes;software radio;GPU architectures;GPU systems;GPU-based LDPC decoder;LDPC decoder;SDR systems;algorithm optimization;asynchronous data transfer;bit rate 1.25 Gbit/s;bit rate 316 Mbit/s;bit rate 62.5 Mbit/s to 304.16 Mbit/s;coalesced memory access;decoding latency;graphics processing units;high throughput low latency LDPC decoding;multistream concurrent kernel execution;optimization techniques;parallel LDPC decoder;software-defined radio;Decoding;Graphics processing units;Kernel;Message systems;Parity check codes;Throughput;WiMAX;GPU;LDPC codes;high throughput;low latency;software-defined radio}, 
+keywords={codecs;data communication;decoding;graphics processing units;parity check codes;software radio;GPU architectures;GPU systems;GPU-based {LDPC} decoder;LDPC decoder;SDR systems;algorithm optimization;asynchronous data transfer;bit rate 1.25 Gbit/s;bit rate 316 Mbit/s;bit rate 62.5 Mbit/s to 304.16 Mbit/s;coalesced memory access;decoding latency;graphics processing units;high throughput low latency {LDPC} decoding;multistream concurrent kernel execution;optimization techniques;parallel {LDPC} decoder;software-defined radio;Decoding;Graphics processing units;Kernel;Message systems;Parity check codes;Throughput;WiMAX;GPU;LDPC codes;high throughput;low latency;software-defined radio}, 
 doi={10.1109/GlobalSIP.2013.6737137}, 
 month={Dec},}
 
 @ARTICLE{art_ldpc_OpenCl, 
 author={G. Falcao and V. Silva and L. Sousa and J. Andrade}, 
 journal={IEEE Signal Processing Magazine}, 
-title={Portable LDPC Decoding on Multicores Using OpenCL [Applications Corner]}, 
+title={Portable {LDPC} Decoding on Multicores Using OpenCL [Applications Corner]}, 
 year={2012}, 
 volume={29}, 
 number={4}, 
 pages={81-109}, 
-keywords={decoding;parallel architectures;parity check codes;signal processing;CPU;GPU;Open Computing Language;OpenCL framework;error-correcting code systems;graphics processing units;low density parity check decoding;multicore central processing unit;multicores;multiplatform kernels;parallel computing architecture;parallel kernels;portable LDPC decoding;signal processing;Error correction codes;Multicore processing;Parallel processing;Signal processing algorithms;Tutorials}, 
+keywords={decoding;parallel architectures;parity check codes;signal processing;CPU;GPU;Open Computing Language;OpenCL framework;error-correcting code systems;graphics processing units;low density parity check decoding;multicore central processing unit;multicores;multiplatform kernels;parallel computing architecture;parallel kernels;portable {LDPC} decoding;signal processing;Error correction codes;Multicore processing;Parallel processing;Signal processing algorithms;Tutorials}, 
 doi={10.1109/MSP.2012.2192212}, 
 ISSN={1053-5888}, 
 month={July},}
@@ -247,10 +247,10 @@ month={July},}
 @INPROCEEDINGS{art_memory_coalesced, 
 author={S. Kang and J. Moon}, 
 booktitle={Communications (ICC), 2012 IEEE International Conference on Proc}, 
-title={Parallel LDPC decoder implementation on GPU based on unbalanced memory coalescing}, 
+title={Parallel {LDPC} decoder implementation on {GPU} based on unbalanced memory coalescing}, 
 year={2012}, 
 pages={3692-3697}, 
-keywords={decoding;graph theory;graphics processing units;message passing;parallel architectures;parity check codes;CUDA-GPU decoder;LDPC code structure;bipartite graph;bit-to-check message passing;check-to-bit message passing;coalesced memory access;compute-unified-device-architecture programming;decoding process;graphics processing unit;low density parity check codes;memory transaction time reduction;on-chip shared memory;parallel LDPC decoder design;texture cache;unbalanced memory coalescing;Arrays;Decoding;Error analysis;Graphics processing units;Memory management;Message passing;Parity check codes}, 
+keywords={decoding;graph theory;graphics processing units;message passing;parallel architectures;parity check codes;CUDA-GPU decoder;LDPC code structure;bipartite graph;bit-to-check message passing;check-to-bit message passing;coalesced memory access;compute-unified-device-architecture programming;decoding process;graphics processing unit;low density parity check codes;memory transaction time reduction;on-chip shared memory;parallel {LDPC} decoder design;texture cache;unbalanced memory coalescing;Arrays;Decoding;Error analysis;Graphics processing units;Memory management;Message passing;Parity check codes}, 
 doi={10.1109/ICC.2012.6363991}, 
 ISSN={1550-3607}, 
 month={June},}
@@ -285,12 +285,12 @@ month={Mar},}
 @ARTICLE{art_massively, 
 author={G. Falcao and L. Sousa and V. Silva}, 
 journal={IEEE Transactions on Parallel and Distributed Systems}, 
-title={Massively LDPC Decoding on Multicore Architectures}, 
+title={Massively {LDPC} Decoding on Multicore Architectures}, 
 year={2011}, 
 volume={22}, 
 number={2}, 
 pages={309-322}, 
-keywords={computer graphic equipment;coprocessors;multiprocessing systems;parallel algorithms;Cell broadband engine;graphics processing units;low-density parity-check code;multicore architectures;parallel algorithms;software-based LDPC decoders;x86 processors;Computer architecture;Data structures;Decoding;Graphics;Multicore processing;Parallel algorithms;Parallel processing;Parity check codes;Throughput;Very large scale integration;CELL;CUDA;GPU;LDPC;OpenMP.;data-parallel computing;graphics processing units;multicore}, 
+keywords={computer graphic equipment;coprocessors;multiprocessing systems;parallel algorithms;Cell broadband engine;graphics processing units;low-density parity-check code;multicore architectures;parallel algorithms;software-based {LDPC} decoders;x86 processors;Computer architecture;Data structures;Decoding;Graphics;Multicore processing;Parallel algorithms;Parallel processing;Parity check codes;Throughput;Very large scale integration;CELL;CUDA;GPU;LDPC;OpenMP.;data-parallel computing;graphics processing units;multicore}, 
 doi={10.1109/TPDS.2010.66}, 
 ISSN={1045-9219}, 
 month={Feb},}
@@ -324,13 +324,13 @@ month={Feb},}
 @Article{art_cuda_openmp,
 author="Park, Joo-Yul
 and Chung, Ki-Seok",
-title="Parallel LDPC decoding using CUDA and OpenMP",
+title="Parallel {LDPC} decoding using CUDA and OpenMP",
 journal="EURASIP Journal on Wireless Communications and Networking",
 year="2011",
 volume="2011",
 number="1",
 pages="1--8",
-abstract="Digital mobile communication technologies, such as next generation mobile communication and mobile TV, are rapidly advancing. Hardware designs to provide baseband processing of new protocol standards are being actively attempted, because of concurrently emerging multiple standards and diverse needs on device functions, hardware-only implementation may have reached a limit. To overcome this challenge, digital communication system designs are adopting software solutions that use central processing units or graphics processing units (GPUs) to implement communication protocols. In this article we propose a parallel software implementation of low density parity check decoding algorithms, and we use a multi-core processor and a GPU to achieve both flexibility and high performance. Specifically, we use OpenMP for parallelizing software on a multi-core processor and Compute Unified Device Architecture (CUDA) for parallel software running on a GPU. We process information on H-matrices using OpenMP pragmas on a multi-core processor and execute decoding algorithms in parallel using CUDA on a GPU. We evaluated the performance of the proposed implementation with respect to two different code rates for the China Multimedia Mobile Broadcasting (CMMB) standard, and we verified that the proposed implementation satisfies the CMMB bandwidth requirement.",
+abstract="Digital mobile communication technologies, such as next generation mobile communication and mobile TV, are rapidly advancing. Hardware designs to provide baseband processing of new protocol standards are being actively attempted, because of concurrently emerging multiple standards and diverse needs on device functions, hardware-only implementation may have reached a limit. To overcome this challenge, digital communication system designs are adopting software solutions that use central processing units or graphics processing units (GPUs) to implement communication protocols. In this article we propose a parallel software implementation of low density parity check decoding algorithms, and we use a multi-core processor and a {GPU} to achieve both flexibility and high performance. Specifically, we use OpenMP for parallelizing software on a multi-core processor and Compute Unified Device Architecture (CUDA) for parallel software running on a GPU. We process information on H-matrices using OpenMP pragmas on a multi-core processor and execute decoding algorithms in parallel using CUDA on a GPU. We evaluated the performance of the proposed implementation with respect to two different code rates for the China Multimedia Mobile Broadcasting (CMMB) standard, and we verified that the proposed implementation satisfies the CMMB bandwidth requirement.",
 issn="1687-1499",
 doi="10.1186/1687-1499-2011-172",
 url="http://dx.doi.org/10.1186/1687-1499-2011-172"
@@ -340,7 +340,7 @@ url="http://dx.doi.org/10.1186/1687-1499-2011-172"
 @INPROCEEDINGS{art_ldpc_cpu0, 
 author={S. Grönroos and J. Björkqvist}, 
 booktitle={Global Conference on Signal and Information Processing (GlobalSIP), 2013 IEEE}, 
-title={Performance evaluation of LDPC decoding on a general purpose mobile CPU}, 
+title={Performance evaluation of {LDPC} decoding on a general purpose mobile CPU}, 
 year={2013}, 
 pages={1278-1281}, 
 keywords={channel coding;graphics processing units;mobile computing;parity check codes;performance evaluation;LDPC decoding;building block;channel decoding;general purpose mobile CPU;graphics processing unit;low density parity check;mobile CPU;mobile platform;performance evaluation;telecommunication systems;Decoding;Digital video broadcasting;Graphics processing units;Mobile communication;Parity check codes;Standards;Throughput;ARM;LDPC;NEON;SDR}, 
@@ -350,7 +350,7 @@ month={Dec},}
 @ARTICLE{art_ldpc_cpu1, 
 author={B. Le Gal and C. Jego}, 
 journal={IEEE Transactions on Parallel and Distributed Systems}, 
-title={High-throughput multi-core LDPC decoders based on x86 processor}, 
+title={High-throughput multi-core {LDPC} decoders based on x86 processor}, 
 year={2015}, 
 volume={PP}, 
 number={99}, 
@@ -364,13 +364,13 @@ month={},}
 author="Gr{\"o}nroos, Stefan
 and Nybom, Kristian
 and Bj{\"o}rkqvist, Jerker",
-title="Efficient GPU and CPU-based LDPC decoders for long codewords",
+title="Efficient {GPU} and CPU-based {LDPC} decoders for long codewords",
 journal="Analog Integrated Circuits and Signal Processing",
 year="2012",
 volume="73",
 number="2",
 pages="583--595",
-abstract="The next generation DVB-T2, DVB-S2, and DVB-C2 standards for digital television broadcasting specify the use of low-density parity-check (LDPC) codes with codeword lengths of up to 64800 bits. The real-time decoding of these codes on general purpose computing hardware is useful for completely software defined receivers, as well as for testing and simulation purposes. Modern graphics processing units (GPUs) are capable of massively parallel computation, and can in some cases, given carefully designed algorithms, outperform general purpose CPUs (central processing units) by an order of magnitude or more. The main problem in decoding LDPC codes on GPU hardware is that LDPC decoding generates irregular memory accesses, which tend to carry heavy performance penalties (in terms of efficiency) on GPUs. Memory accesses can be efficiently parallelized by decoding several codewords in parallel, as well as by using appropriate data structures. In this article we present the algorithms and data structures used to make log-domain decoding of the long LDPC codes specified by the DVB-T2 standard---at the high data rates required for television broadcasting---possible on a modern GPU. Furthermore, we also describe a similar decoder implemented on a general purpose CPU, and show that high performance LDPC decoders are also possible on modern multi-core CPUs.",
+abstract="The next generation DVB-T2, DVB-S2, and DVB-C2 standards for digital television broadcasting specify the use of low-density parity-check (LDPC) codes with codeword lengths of up to 64800 bits. The real-time decoding of these codes on general purpose computing hardware is useful for completely software defined receivers, as well as for testing and simulation purposes. Modern graphics processing units (GPUs) are capable of massively parallel computation, and can in some cases, given carefully designed algorithms, outperform general purpose CPUs (central processing units) by an order of magnitude or more. The main problem in decoding {LDPC} codes on {GPU} hardware is that {LDPC} decoding generates irregular memory accesses, which tend to carry heavy performance penalties (in terms of efficiency) on GPUs. Memory accesses can be efficiently parallelized by decoding several codewords in parallel, as well as by using appropriate data structures. In this article we present the algorithms and data structures used to make log-domain decoding of the long {LDPC} codes specified by the DVB-T2 standard---at the high data rates required for television broadcasting---possible on a modern GPU. Furthermore, we also describe a similar decoder implemented on a general purpose CPU, and show that high performance {LDPC} decoders are also possible on modern multi-core CPUs.",
 issn="1573-1979",
 doi="10.1007/s10470-012-9895-7",
 url="http://dx.doi.org/10.1007/s10470-012-9895-7"
@@ -379,7 +379,7 @@ url="http://dx.doi.org/10.1007/s10470-012-9895-7"
 @ARTICLE{art_convolutional, 
 author={Y. Hou and R. Liu and H. Peng and L. Zhao}, 
 journal={IEEE Communications Letters}, 
-title={High Throughput Pipeline Decoder for LDPC Convolutional Codes on GPU}, 
+title={High Throughput Pipeline Decoder for {LDPC} Convolutional Codes on GPU}, 
 year={2015}, 
 volume={19}, 
 number={12}, 
@@ -433,12 +433,12 @@ month={April},}
 @ARTICLE{art_quasi, 
 author={K. Zhang and X. Huang and Z. Wang}, 
 journal={IEEE Journal on Selected Areas in Communications}, 
-title={High-throughput layered decoder implementation for quasi-cyclic LDPC codes}, 
+title={High-throughput layered decoder implementation for quasi-cyclic {LDPC} codes}, 
 year={2009}, 
 volume={27}, 
 number={6}, 
 pages={985-994}, 
-keywords={CMOS integrated circuits;application specific integrated circuits;cyclic codes;parity check codes;ASIC;CMOS;bit rate 2.2 Gbit/s;critical path splitting;crossbar-based large interconnect network;frequency 950 MHz;high-throughput decoder design;parallel layered decoding architecture;quasi-cyclic LDPC codes;quasi-cyclic low-density parity-check codes;size 90 nm;Application specific integrated circuits;CMOS process;Delay effects;Frequency synthesizers;Iterative decoding;Message passing;Parallel processing;Parity check codes;Pipelines;Throughput;Low-density parity-check codes, quasi-cyclic codes, parallel architecture, layered decoding, critical path splitting, min-sum algorithm, loosely coupled algorithm, VLSI.}, 
+keywords={CMOS integrated circuits;application specific integrated circuits;cyclic codes;parity check codes;ASIC;CMOS;bit rate 2.2 Gbit/s;critical path splitting;crossbar-based large interconnect network;frequency 950 MHz;high-throughput decoder design;parallel layered decoding architecture;quasi-cyclic {LDPC} codes;quasi-cyclic low-density parity-check codes;size 90 nm;Application specific integrated circuits;CMOS process;Delay effects;Frequency synthesizers;Iterative decoding;Message passing;Parallel processing;Parity check codes;Pipelines;Throughput;Low-density parity-check codes, quasi-cyclic codes, parallel architecture, layered decoding, critical path splitting, min-sum algorithm, loosely coupled algorithm, VLSI.}, 
 doi={10.1109/JSAC.2009.090816}, 
 ISSN={0733-8716}, 
 month={August},}
